--- a/index.html
+++ b/index.html
@@ -3,18 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>55-dars. Bootstrap. container va boshqa umumiy masalalar</title>
+  <title>Sorted Movies</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
- 
-  
+ 	<div class="container-fluid bg-success">
+ 		<div class="container bd-light">
+ 			<div class="d-flex justify-content-center pt-3">
+ 				<a class="logo" href="index.html">
+ 					<img class="logo__img img-fluid" src="img/logo.png" alt="Movie logo" width="190" height="114">
+ 				</a>
+ 			</div>
+ 			<div class="row">
+ 				<div class="col-md-12 justify-content-center d-flex py-5">
+	 				<form class="form-inline js-form" action="https://echo.htmlacademy.ru" method="POST">
+	 					<input class="form-control js-search" type="search" placeholder="Search by title" name="search" aria-label="Type to search" required>
 
+	 					<select class="form-control mx-3 js-catagories" name="catagory">
+	 						<option value="" disabled selected>Select catagory</option>
+	 						<option value="Anime">Anime</option>
+	 						<option value="Fantasy">Fantasy</option>
+	 					</select>
 
+	 					<select class="form-control js-sort" name="sort">
+	 						<option value="" disabled selected>Sort by</option>
+	 						<option value="Anime">Rating</option>
+	 						<option value="Fantasy">Year</option>
+	 					</select>
+
+	 					<button class="btn btn-primary ml-3" type="submit">Find</button>
+	 				</form>
+ 					
+ 				</div>
+ 			</div>
+ 		</div><!-- End of container -->
+ 	</div><!-- End of container-fluid -->
+  <div class="movies-container container pt-3">
+  	<div class="result-number-wrapper"></div>
+
+  	<div class="movies row">
+		</div><!-- End of row -->
+  </div><!-- End of container -->
+
+  <template id="movie-template">
+  	<div class="movie col-md-3 rounded mb-3">
+			<div class="movie__inner text-secondary bg-light p-2">
+				<h3 class="movie__title h4 pt-2 text-truncate">Movie name Movie name Movie name Movie name</h3>
+				<div>Year: <small class="movie__year">2017</small></div>
+				<div>IMDB: <small class="movie__rating">6.5</small></div>
+				<a class="movie__youtube-link text-primary" href="#" target="_blank">Watch trailer</a>
+			</div>
+		</div><!-- End of movie -->
+  </template>
+  <template id="alert-template">
+  	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+		  <strong>Search result: </strong><span class="js-result-num"></span>
+		  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		    <span aria-hidden="true">&times;</span>
+		  </button>
+		</div>
+  </template>
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/movies.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
