Get all catagories from JSON

--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
 
 	 					<select class="form-control mx-3 js-catagories" name="catagory">
 	 						<option value="" disabled selected>Select catagory</option>
-	 						<option value="Sport">Sport</option>
-	 						<option value="Comedy">Comedy</option>
-	 						<option value="Family">Family</option>
-	 						<option value="Fantasy">Fantasy</option>
-	 						<option value="Action">Action</option>
-	 						<option value="Adventure">Adventure</option>
 	 					</select>
 
 	 					<select class="form-control js-sort" name="sort">
@@ -37,7 +31,7 @@
 	 						<option value="year">Year</option>
 	 					</select>
 
-	 					<button class="btn btn-primary ml-3" type="submit">Find</button>
+	 					<!-- <button class="btn btn-primary ml-3" type="submit">Find</button> -->
 	 				</form>
  					
  				</div>
