Add sort by selection

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 	 					<input class="form-control js-search" type="search" placeholder="Search by title" name="search" aria-label="Type to search" required>
 
 	 					<select class="form-control mx-3 js-catagories" name="catagory">
-	 						<option value="" disabled selected>Select catagory</option>
+	 						<option value="" selected>Select catagory</option>
 	 					</select>
 
 	 					<select class="form-control js-sort" name="sort">
-	 						<option value="" disabled selected>Sort by</option>
+	 						<option value="" selected>Sort by</option>
 	 						<option value="rating">Rating</option>
 	 						<option value="year">Year</option>
 	 					</select>
 
-	 					<!-- <button class="btn btn-primary ml-3" type="submit">Find</button> -->
+	 					<button class="btn btn-primary ml-3" type="submit">Find</button>
 	 				</form>
  					
  				</div>
