--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/movies.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
