Refactor html, js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  			<div class="row">
  				<div class="col-md-12 justify-content-center d-flex py-5">
 	 				<form class="form-inline js-form" action="https://echo.htmlacademy.ru" method="POST">
-	 					<input class="form-control js-search" type="search" placeholder="Search by title" name="search" aria-label="Type to search" required>
+	 					<input class="form-control js-search" type="search" placeholder="Search by title" name="search" aria-label="Type to search">
 
 	 					<select class="form-control mx-3 js-catagories" name="catagory">
 	 						<option value="" selected>Select catagory</option>
