Add more nutton and make interactive it by listening its father or wrapper

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 				<div>IMDB: <small class="movie__rating">6.5</small></div>
 				<div class="text-truncate">Catagory: <small class="movie__catagory">Anime</small></div>
 				<a class="movie__youtube-link text-primary" href="#" target="_blank">Watch trailer</a>
+				<button class="modal-button btn btn-block mt-2 btn-primary" type="button">more</button>
 			</div>
 		</div><!-- End of movie -->
   </template>
