Refactor code: add a sort type and sort searched movies with it

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
 
 	 					<select class="form-control js-sort" name="sort" aria-label="Select sort method">
 	 						<option value="" selected>Sort by</option>
-	 						<option value="rating">Rating</option>
-	 						<option value="year">Year</option>
+	 						<option value="rating_asc">Rating Low to High</option>
+	 						<option value="rating_desc">Rating High to Low</option>
+	 						<option value="az">By name A-Z</option>
+	 						<option value="za">By name Z-A</option>
+	 						<option value="year_asc">Year Old to New</option>
+	 						<option value="year_desc">Year New to Old</option>
 	 					</select>
 
 	 					<button class="btn btn-primary" type="submit">Find</button>
