--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div>IMDB: <small class="movie__rating">6.5</small></div>
 				<div class="text-truncate">Catagory: <small class="movie__catagory">Anime</small></div>
 				<a class="movie__youtube-link text-primary" href="#" target="_blank">Watch trailer</a>
-				<button class="modal-button btn btn-block mt-2 btn-primary" type="button">more</button>
+				<button class="modal-button btn btn-block mt-2 btn-primary" type="button" data-toggle="modal" data-target="#movieModal">more</button>
 			</div>
 		</div><!-- End of movie -->
   </template>
@@ -71,6 +71,28 @@
 		  </button>
 		</div>
   </template>
+
+  <!-- Modal -->
+  <div class="modal fade" id="movieModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title js-modal-movie-title" id="exampleModalLabel">Modal title</h5>
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+	      <div class="modal-body js-modal-movie-summary">
+	        
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+  <!-- Modal end -->
+
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/movies.js"></script>
