Add bookmark button

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 				<div class="text-truncate">Catagory: <small class="movie__catagory">Anime</small></div>
 				<a class="movie__youtube-link text-primary" href="#" target="_blank">Watch trailer</a>
 				<button class="modal-button btn btn-block mt-2 btn-primary" type="button" data-toggle="modal" data-target="#movieModal">more</button>
+				<button class="bookmark-button btn btn-block mt-2 btn-success" type="button">bookmark</button>
 			</div>
 		</div><!-- End of movie -->
   </template>
