--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
 	          <span aria-hidden="true">&times;</span>
 	        </button>
 	      </div>
+	      <div class="modal-body">
+	      	<img class="img-fluid img-thumbnail js-modal-movie-img" width="498" height="342" src="#" alt="">
+	        <div>Year: <small class="js-modal-movie-year">2017</small></div>
+					<div>IMDB: <small class="js-modal-movie-imdb">6.5</small></div>
+	      </div>
 	      <div class="modal-body js-modal-movie-summary">
-	        
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
