--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sorted Movies</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
-	<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+	 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
  	<div class="container-fluid bg-success">
+ 		<div class="navbar">
+ 			<div class="dropdown">
+			  <button class="d-flex align-items-center btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    	<span>Bookmarks</span>
+				    <span class="material-icons">
+							bookmark_border
+						</span>
+			  </button>
+			  <div class="dropdown-menu js-movie-bookmarks" aria-labelledby="dropdownMenuButton">
+					
+			  </div>
+			</div>
+ 		</div>
  		<div class="container bd-light">
  			<div class="d-flex justify-content-center pt-3">
  				<a class="logo" href="index.html">
@@ -44,6 +58,7 @@
  			</div>
  		</div><!-- End of container -->
  	</div><!-- End of container-fluid -->
+
   <div class="movies-container container pt-3">
   	<div class="result-number-wrapper"></div>
 
@@ -63,13 +78,25 @@
 				<button class="bookmark-button btn btn-block mt-2 btn-success" type="button">bookmark</button>
 			</div>
 		</div><!-- End of movie -->
-  </template>
+  </template><!-- End of movie-template -->
+
   <template id="alert-template">
   	<div class="alert alert-warning alert-dismissible fade show" role="alert">
 		  <strong>Search result: </strong><span class="js-result-num"></span>
 		  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		    <span aria-hidden="true">&times;</span>
 		  </button>
+		</div>
+  </template><!-- End of alert-template -->
+
+  <template id="bookmark-template">
+		<div class="bookmark-movie dropdown-item px-1 d-flex align-items-center justify-content-between">
+			<span class="js-movie-bookmark-title text-truncate"></span>
+			<button type="button" class="btn rounded rounded-circle p-0 js-movie-bookmark-remove ml-2">
+				<span class="material-icons" style="color: #dc3545;;">
+					delete
+				</span>
+			</button>
 		</div>
   </template>
 
