Add removing bookmarked movies from array and list feature

--- a/index.html
+++ b/index.html
@@ -92,10 +92,8 @@
   <template id="bookmark-template">
 		<div class="bookmark-movie dropdown-item px-1 d-flex align-items-center justify-content-between">
 			<span class="js-movie-bookmark-title text-truncate"></span>
-			<button type="button" class="btn rounded rounded-circle p-0 js-movie-bookmark-remove ml-2">
-				<span class="material-icons" style="color: #dc3545;;">
+			<button type="button" class="btn btn-sm btn-danger js-movie-bookmark-remove ml-2">
 					delete
-				</span>
 			</button>
 		</div>
   </template>
