Refactor bookmarks in localStorage

--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
 	</div>
   <!-- Modal end -->
 
+  <!-- ask name -->
+  <div class="name-modal-wrapper show">
+	  <div class="name-modal bg-white text-secondary rounded border text-center">
+	  	<h3 class="h5 mb-3">Your name please?</h3>
+	  	<form class="form" method="GET" action="https://echo.htmlacademy.ru">
+		  	<div class="form-group">
+			  	<input class="name-modal__input form-control" type="text" placeholder="Harry Potter" autocomplete="off" spellcheck="false" aria-label="insert your name" required name="name">
+		  	</div>
+				<button type="submit" class="btn btn-success">Submit</button>  		
+	  	</form>
+	  </div><!-- End of name-modal -->
+	  <span class="curtain"></span>
+  </div>
+
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/movies.js"></script>
